[package]
name = "tgjsps"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = "0.8.12"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
memchr = "2.7.6"
simd-json = "0.17.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
debug = false
panic = "abort"
